kubernetes/apps/network/kgateway/app/oauth2.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sso-callback
spec:
  hostnames:
    - sso.matherly.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/redirect
      backendRefs:
        - name: keycloak-http
          namespace: keycloak
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: auth.matherly.net
            path:
              type: ReplaceFullPath
              replaceFullPath: /realms/k8s-cluster/account
            statusCode: 302
