kubernetes/apps/network/kgateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kgateway-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kgateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: external
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: internal
      toPorts:
        - ports:
            - port: "9977"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: external
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: internal
      toPorts:
        - ports:
            - port: "9977"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kgateway-envoy
spec:
  endpointSelector:
    matchExpressions:
      - key: gateway.networking.k8s.io/gateway-name
        operator: In
        values: ["external", "internal"]
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "19001"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kgateway
      toPorts:
        - ports:
            - port: "9977"
              protocol: TCP
    - toEntities:
        - cluster
